--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -1356,11 +1356,11 @@
  	 	"logout": {
  	 	 	"cancelAfkConfirmModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "取消AFK和注销？",
+ 	 	 	 	 	"trans": "取消挂机任务并登出？",
  	 	 	 	 	"eng": "Cancel Afk and logout?"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "您确定要取消AFK和注销吗？ 用于启动任务的资源将不退还。",
+ 	 	 	 	 	"trans": "您确定要取消挂机任务并登出吗？ 任何用于启动任务的材料将不会退还。",
  	 	 	 	 	"eng": "Are you sure you want to cancel your afk and logout? the resource used to start the task will NOT be refunded."
  	 	 	 	}
  	 	 	}
@@ -1406,7 +1406,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "这将采用${time}",
+ 	 	 	 	"trans": "这将花费${time}",
  	 	 	 	"eng": "This will take ${time}"
  	 	 	}
  	 	},
@@ -1479,7 +1479,7 @@
  	 	},
  	 	"rewardActionConfirmModal": {
  	 	 	"captcha": {
- 	 	 	 	"trans": "将所有进程图标拖到红色框中以启动任务",
+ 	 	 	 	"trans": "将所有进程图标拖到红色框中来启动任务",
  	 	 	 	"eng": "Drag all processes icons into to the red box entirely to initiate the task"
  	 	 	}
  	 	},
@@ -3076,7 +3076,7 @@
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "配置文件的条形码装饰",
+ 	 	 	 	 	"trans": "条形码装饰的个人资料",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
@@ -3164,7 +3164,7 @@
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "配置文件的条形码装饰",
+ 	 	 	 	 	"trans": "条形码装饰的个人资料",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"9": {
@@ -3208,7 +3208,7 @@
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "配置文件的条形码装饰",
+ 	 	 	 	 	"trans": "条形码装饰的个人资料",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
@@ -3232,35 +3232,35 @@
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "解锁个人资料图片自定义",
+ 	 	 	 	 	"trans": "解锁个人资料头像定制",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "紫色霓虹灯聊天框架（带有动画）",
+ 	 	 	 	 	"trans": "紫色霓虹灯聊天框架（自带动画）",
  	 	 	 	 	"eng": "Purple Neon chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "紫色霓虹灯构造的个人资料（带有动画）",
+ 	 	 	 	 	"trans": "紫色霓虹灯构造的个人资料（自带动画）",
  	 	 	 	 	"eng": "Purple Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "解锁自定义生物",
+ 	 	 	 	 	"trans": "解锁自定义简介",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "轮廓上的条形码装饰",
+ 	 	 	 	 	"trans": "条形码装饰的个人资料",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "定制帮派座右铭",
+ 	 	 	 	 	"trans": "定制帮派口号",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "自定义帮派图像",
+ 	 	 	 	 	"trans": "定制公会图像",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "将来更新会有更多",
+ 	 	 	 	 	"trans": "未来持续更新中...",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -3359,7 +3359,7 @@
  	 	 	 	"eng": "Energy Cell"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "便携能量储存设备，可作为特殊武器的弹药使用。",
+ 	 	 	 	"trans": "便携能量储存设备，可作为特殊武器使用的弹药。",
  	 	 	 	"eng": "Portable energy storage device, it can be used as consumable ammo for your Special Weapons"
  	 	 	}
  	 	},
@@ -3369,7 +3369,7 @@
  	 	 	 	"eng": "Anti Matter Charge"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "精密、小巧的一次性反物质生成器。\r\n        它能产生巨大的能量，可作为毁灭武器的弹药使用。",
+ 	 	 	 	"trans": "精密、小巧的一次性反物质生成器。\r\n        它能产生巨大的能量，可作为毁灭武器使用的弹药。",
  	 	 	 	"eng": "High-tech, miniaturized, one-time use, antimatter energy generator. \r\n        This item produces enormous amounts of power. You can use this as ammunition for your destructive weapon. "
  	 	 	}
  	 	},
@@ -3379,7 +3379,7 @@
  	 	 	 	"eng": "Ammunition tech parts"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "在黑市里流通的弹药碎片\r\n        如果掌握了配方就能制造弹药。",
+ 	 	 	 	"trans": "黑市里流通的弹药碎片\r\n        你如果掌握了配方就能制造弹药。",
  	 	 	 	"eng": "Ammunition tech parts, These can be commonly found circulating the black market. \r\n        You can use these to craft ammunition if you understand how."
  	 	 	}
  	 	},
@@ -3389,17 +3389,17 @@
  	 	 	 	"eng": "Military ammunition tech parts"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "军用弹药碎片，被政府、军队、精英人士广泛使用，如果掌握了配方就能制造高级弹药。",
+ 	 	 	 	"trans": "军用弹药碎片，被政府、军队、精英人士广泛使用，你如果掌握了配方就能制造高级弹药。",
  	 	 	 	"eng": "Military grade ammunition tech parts, commonly used by government, military and the elites,can be used to craft into usable Ammo if you have the know-how"
  	 	 	}
  	 	},
  	 	"techScrap": {
  	 	 	"name": {
- 	 	 	 	"trans": "装备碎片",
+ 	 	 	 	"trans": "科技碎片",
  	 	 	 	"eng": "Tech Scrap"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "从被拆解的武器与装甲上得到的碎片，可以进行逆向工程来获得合成经验。\r\n        在[工作中心]即可进行逆向工程。",
+ 	 	 	 	"trans": "从被拆解的武器与装甲上得到的碎片，可以对它进行逆向工程来获取合成经验。\r\n        在[工作中心]即可进行逆向工程。",
  	 	 	 	"eng": "Technology scrap from disassembled equipment, this can be reverse engineered to gain printing xp. \r\n        You can perform reverse engineering in the Job Hub."
  	 	 	}
  	 	},
@@ -4544,7 +4544,7 @@
  	 	 	 	"eng": "work in printing factory"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "在不消耗装备碎片的情况下练习你的分子合成技巧, 这将帮助你提高你的打印等级。",
+ 	 	 	 	"trans": "在不消耗科技碎片的情况下练习你的分子合成技巧, 这将帮助你提高你的打印等级。",
  	 	 	 	"eng": "Improve Printing Rank without sacrificing tech scrap, this may help to increase the level of your prints."
  	 	 	}
  	 	},
@@ -4570,11 +4570,11 @@
  	 	},
  	 	"reverseEngineer": {
  	 	 	"name": {
- 	 	 	 	"trans": "逆向分析装备碎片",
+ 	 	 	 	"trans": "逆向分析科技碎片",
  	 	 	 	"eng": "Reverse Engineer Scraps"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "使用逆向工程对装备碎片进行分析, 获得更多对分子合成学的理解。 \r\n        您将消耗一些装备碎片。",
+ 	 	 	 	"trans": "使用逆向工程对科技碎片进行分析, 获得更多对分子合成学的理解。 \r\n        您将消耗一些科技碎片。",
  	 	 	 	"eng": "Reverse engineer tech scrap to improve your Print Rank. \r\n        You’ll need to sacrifice some of your tech scrap."
  	 	 	}
  	 	},
@@ -5711,7 +5711,7 @@
  	 	 	 	"eng": "If you have some spare change it would be very helpful if you could donate to help with continued support and development of the game."
  	 	 	},
  	 	 	"content4": {
- 	 	 	 	"trans": "如果你想要支持就继续捐赠吧，但是捐赠获得的好处对所有玩家们都是公平的，你并不取得任何优势！",
+ 	 	 	 	"trans": "如果你想要支持就继续捐赠吧，但是捐赠获得的好处对所有玩家们都是公平的，你并不会获得任何优势！",
  	 	 	 	"eng": "Please only donate if you are comfortable, all benefits are designed to be fair for all players and will not give an edge in gameplay."
  	 	 	}
  	 	},
@@ -5734,7 +5734,7 @@
  	 	 	"vars": [
  	 	 	 	"date"
  	 	 	],
- 	 	 	"trans": "折扣以${date}结束",
+ 	 	 	"trans": "折扣会在${date}结束",
  	 	 	"eng": "Discount ends in ${date}"
  	 	},
  	 	"permanentDescription": {
