--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -24,7 +24,7 @@
  	"ui": {
  	 	"blackMarket": {
  	 	 	"selectItemButton": {
- 	 	 	 	"trans": "Tisk a sell",
+ 	 	 	 	"trans": "Tisk a prodej",
  	 	 	 	"eng": "Print And Sell"
  	 	 	}
  	 	},
@@ -38,7 +38,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount} Bitcoinů bude vloženo na účet vašeho gangu, tato akce nemůže být zvrácena",
+ 	 	 	 	 	"trans": "${amount} Bitcoinů bude vloženo na účet vašeho gangu, tato akce nemůže být vrácena",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
@@ -54,18 +54,18 @@
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"button": {
- 	 	 	 	 	"trans": "Upravit Motto Gangu",
+ 	 	 	 	 	"trans": "Upravit motto gangu",
  	 	 	 	 	"eng": "Edit Gang Motto"
  	 	 	 	}
  	 	 	},
  	 	 	"updateImage": {
  	 	 	 	"button": {
- 	 	 	 	 	"trans": "Aktualizovat Obrázek Gangu",
+ 	 	 	 	 	"trans": "Aktualizovat Obrázek gangu",
  	 	 	 	 	"eng": "Update Gang Image"
  	 	 	 	}
  	 	 	},
  	 	 	"level": {
- 	 	 	 	"trans": "Úroveň Gangu",
+ 	 	 	 	"trans": "Úroveň gangu",
  	 	 	 	"eng": "Gang Level"
  	 	 	},
  	 	 	"resource": {
@@ -105,7 +105,7 @@
  	 	 	},
  	 	 	"occupation": {
  	 	 	 	"noClan": {
- 	 	 	 	 	"trans": "V tuto chvíli není tato oblast okupována žádným gangem",
+ 	 	 	 	 	"trans": "V tuto chvíli není tato oblast obsazena žádným gangem",
  	 	 	 	 	"eng": "No gang has occupied this area yet"
  	 	 	 	}
  	 	 	},
@@ -128,7 +128,7 @@
  	 	 	"colors": {
  	 	 	 	"win": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Dešifrování úspěšného",
+ 	 	 	 	 	 	"trans": "Dešifrování úspěšné",
  	 	 	 	 	 	"eng": "Decryption successful"
  	 	 	 	 	},
  	 	 	 	 	"description": {
@@ -188,7 +188,7 @@
  	 	 	 	"eng": "Deposit"
  	 	 	},
  	 	 	"depositDesc": {
- 	 	 	 	"trans": "Vložte Bitcoin do banky",
+ 	 	 	 	"trans": "Vložte Bitcoiny do banky",
  	 	 	 	"eng": "Put Bitcoins into bank"
  	 	 	},
  	 	 	"withdraw": {
@@ -200,19 +200,19 @@
  	 	 	 	"eng": "Take Bitcoins out of bank"
  	 	 	},
  	 	 	"putItemToVault": {
- 	 	 	 	"trans": "Vložit položku",
+ 	 	 	 	"trans": "Vložit předmět",
  	 	 	 	"eng": "Deposit Item"
  	 	 	},
  	 	 	"putItemToVaultDesc": {
- 	 	 	 	"trans": "Umístěte položky do trezoru",
+ 	 	 	 	"trans": "Umístěte předměty do trezoru",
  	 	 	 	"eng": "Put items into your vault"
  	 	 	},
  	 	 	"takeItemFromVault": {
- 	 	 	 	"trans": "Vybrat položku",
+ 	 	 	 	"trans": "Vybrat předmět",
  	 	 	 	"eng": "Withdraw Item"
  	 	 	},
  	 	 	"takeItemFromVaultDesc": {
- 	 	 	 	"trans": "Vyberte položky z vašeho trezoru",
+ 	 	 	 	"trans": "Vyberte předměty z vašeho trezoru",
  	 	 	 	"eng": "Take items out from your vault"
  	 	 	},
  	 	 	"upgradeSlot": {
@@ -226,7 +226,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"upgradeToSlot"
  	 	 	 	],
- 	 	 	 	"trans": "Zvýší maximální množství položek, které můžete uložit v trezoru, na ${upgradeToSlot}",
+ 	 	 	 	"trans": "Zvýší maximální množství předmětů, které můžete uložit v trezoru, na ${upgradeToSlot}",
  	 	 	 	"eng": "Increase the max amount of items you can store in vault to ${upgradeToSlot}"
  	 	 	},
  	 	 	"modal": {
@@ -268,7 +268,7 @@
  	 	 	 	},
  	 	 	 	"tertiary": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Ničivá",
+ 	 	 	 	 	 	"trans": "Ničivá.",
  	 	 	 	 	 	"eng": "Destruct."
  	 	 	 	 	}
  	 	 	 	}
@@ -328,11 +328,11 @@
  	 	 	 	"vars": [
  	 	 	 	 	"minLevel"
  	 	 	 	],
- 	 	 	 	"trans": "Musíte být alespoň ${minLevel}. úrovně pro zasíální zpráv do chatu",
+ 	 	 	 	"trans": "Musíte být alespoň ${minLevel}. úrovně pro zasílání zpráv do chatu",
  	 	 	 	"eng": "You need to be at least level ${minLevel} to send chat messages"
  	 	 	},
  	 	 	"chat": {
- 	 	 	 	"trans": "povídat si",
+ 	 	 	 	"trans": "chat",
  	 	 	 	"eng": "chat"
  	 	 	},
  	 	 	"gang": {
@@ -383,7 +383,7 @@
  	 	 	 	"eng": "Flatlined"
  	 	 	},
  	 	 	"subTitleSmall": {
- 	 	 	 	"trans": "Kritická chyba: Nervové Spojení Odpojeno",
+ 	 	 	 	"trans": "Kritická chyba: Nervové spojení odpojeno",
  	 	 	 	"eng": "Critical Error: Neural Link Disconnected"
  	 	 	},
  	 	 	"progressBarTitle": {
@@ -409,7 +409,7 @@
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
- 	 	 	 	"trans": "Nebo automobilovým tiskem a prodávat své mezeře na černém trhu",
+ 	 	 	 	"trans": "Nebo automatickým tiskem a prodejem svých Schémat na černém trhu",
  	 	 	 	"eng": "Or by auto print and selling your caches in the Black Market"
  	 	 	},
  	 	 	"quickSlots": {
@@ -430,7 +430,7 @@
  	 	 	},
  	 	 	"bindModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Vyberte použitelnou položku, která bude v rychlém přístupu",
+ 	 	 	 	 	"trans": "Vyberte použitelný předmět, která bude v rychlém přístupu",
  	 	 	 	 	"eng": "Select a usable item to bind to a quick slot"
  	 	 	 	}
  	 	 	}
@@ -480,7 +480,7 @@
  	 	 	 	 	"eng": "Global Skip (${timeSkipMinutes} Min, Cost ${timeSkipCost} Units)"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Globální skok vám umožní přeskočit čekací AFK dobu a tím ji okamžitě dokončit. \n     Tento efekt bude použit na všechny hráče, kteří provádějí AFK akci",
+ 	 	 	 	 	"trans": "Globální skok vám umožní přeskočit AFK dobu čekání a tím ji okamžitě dokončit. \n     Tento efekt bude použit na všechny hráče, kteří provádějí AFK akci",
  	 	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all player performing AFK task"
  	 	 	 	}
  	 	 	},
@@ -525,7 +525,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Globální skok vám umožní přeskočit čekací AFK dobu a tím ji okamžitě dokončit. \n     Tento efekt bude použit na všechny hráče, kteří vykonávají AFK akci",
+ 	 	 	 	"trans": "Globální skok vám umožní přeskočit AFK dobu čekání a tím ji okamžitě dokončit. \n     Tento efekt bude použit na všechny hráče, kteří vykonávají AFK akci",
  	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all players performing an AFK task"
  	 	 	}
  	 	},
@@ -606,7 +606,7 @@
  	 	 	 	 	"eng": "Malfunctioned"
  	 	 	 	},
  	 	 	 	"instruction": {
- 	 	 	 	 	"trans": "Tato položka je rozbitá, doneste ji za Zbrojířem pro opravu",
+ 	 	 	 	 	"trans": "Tento předmět je rozbitý, doneste ho za Zbrojířem na opravu",
  	 	 	 	 	"eng": "This item is broken, bring it to Weapon Smith for repair"
  	 	 	 	}
  	 	 	},
@@ -618,7 +618,7 @@
  	 	 	 	]
  	 	 	},
  	 	 	"areaEffect": {
- 	 	 	 	"trans": "[OE] Oblast efektu, efekt této položky bude použit na všechny spojence, kteří jsou s vámi v boji.",
+ 	 	 	 	"trans": "[OE] Oblast efektu, efekt tohoto předmětu bude použit na všechny spojence, kteří jsou s vámi v boji.",
  	 	 	 	"eng": "[AOE] Area of Effect, the effect of this item will apply allies in combat with you."
  	 	 	},
  	 	 	"equip": {
@@ -630,7 +630,7 @@
  	 	 	 	"eng": "Your level is too low for this item"
  	 	 	},
  	 	 	"unequip": {
- 	 	 	 	"trans": "Odbavit",
+ 	 	 	 	"trans": "Odložit",
  	 	 	 	"eng": "Unequip"
  	 	 	},
  	 	 	"use": {
@@ -666,7 +666,7 @@
  	 	 	 	 	"trans": "Provedení této akce obnoví veškerou kalibraci vašich předmětů. Také vám umožní s nimi opět obchodovat. \n      Opravdu chcete pokračovat?",
  	 	 	 	 	"eng": "Doing this will reset all calibration on your item. It will also make it tradable again. \r\n      Are you sure you want to proceed?"
  	 	 	 	},
- 	 	 	 	"trans": "Tovární obnova",
+ 	 	 	 	"trans": "Tovární nastavení",
  	 	 	 	"eng": "Factory Reset"
  	 	 	}
  	 	},
@@ -731,11 +731,11 @@
  	 	 	 	 	 	"vars": [
  	 	 	 	 	 	 	"level"
  	 	 	 	 	 	],
- 	 	 	 	 	 	"trans": "Úroveň tisku ${level} Zařízení",
+ 	 	 	 	 	 	"trans": "Úroveň tisku ${level} vybavení",
  	 	 	 	 	 	"eng": "printing level ${level} equipments"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Tisk zařízení je založen na vaší tiskové hodnosti, vyrovnat svůj tisk tisku tisku více položek",
+ 	 	 	 	 	 	"trans": "Tisk vybavení je založen na vaší tiskové úrovni, zvyšte svoji tiskovou úroveň tiskem dalších předmětů",
  	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
  	 	 	 	 	}
  	 	 	 	}
@@ -774,7 +774,7 @@
  	 	 	 	"eng": "Gear Score"
  	 	 	},
  	 	 	"location": {
- 	 	 	 	"trans": "umístění",
+ 	 	 	 	"trans": "lokace",
  	 	 	 	"eng": "location"
  	 	 	},
  	 	 	"onlineStatus": {
@@ -830,7 +830,7 @@
  	 	 	 	 	"eng": "Permissions"
  	 	 	 	},
  	 	 	 	"transferLeadership": {
- 	 	 	 	 	"trans": "Přenést vedení",
+ 	 	 	 	 	"trans": "Převést vedení",
  	 	 	 	 	"eng": "Transfer Leadership"
  	 	 	 	}
  	 	 	},
@@ -906,7 +906,7 @@
  	 	 	 	 	"eng": "Are you sure you want to leave this dungeon?"
  	 	 	 	},
  	 	 	 	"subtitle": {
- 	 	 	 	 	"trans": "Nebudete moci znovu vstoupit do této instance Dungeonu",
+ 	 	 	 	 	"trans": "Nebudete moci znovu vstoupit do této instance dungeonu",
  	 	 	 	 	"eng": "You will not be able to enter this dungeon instance again"
  	 	 	 	}
  	 	 	}
@@ -937,7 +937,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"nextSlotSize"
  	 	 	 	],
- 	 	 	 	"trans": "Utraťte Bitcoiny pro zvýšení počtu položek, které můžete dát současně do vašeho stánku",
+ 	 	 	 	"trans": "Utraťte Bitcoiny pro zvýšení počtu předmětů, které můžete dát současně do vašeho stánku",
  	 	 	 	"eng": "Spend Bitcoins to increase how many items you can put in your stall at the same time"
  	 	 	},
  	 	 	"cantEnterError": {
@@ -957,7 +957,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"noItems": {
- 	 	 	 	"trans": "V současné době nejsou k dispozici žádné položky v prodeji pro tuto kategorii",
+ 	 	 	 	"trans": "V současné době nejsou k dispozici žádné předměty v prodeji pro tuto kategorii",
  	 	 	 	"eng": "there is currently no items on sale for this category"
  	 	 	},
  	 	 	"buy": {
@@ -970,11 +970,11 @@
  	 	 	},
  	 	 	"stall": {
  	 	 	 	"sellItemButton": {
- 	 	 	 	 	"trans": "Dát položku na prodej",
+ 	 	 	 	 	"trans": "Dát předmět na prodej",
  	 	 	 	 	"eng": "Put Item On Sale"
  	 	 	 	},
  	 	 	 	"selectItemForSale": {
- 	 	 	 	 	"trans": "Vyberte prosím položku, kterou chcete prodat",
+ 	 	 	 	 	"trans": "Vyberte prosím předmět, který chcete prodat",
  	 	 	 	 	"eng": "Please select the item you want to sell"
  	 	 	 	}
  	 	 	}
@@ -985,7 +985,7 @@
  	 	 	 	"eng": "The task will continue even if you close the game"
  	 	 	},
  	 	 	"syncing": {
- 	 	 	 	"trans": "Syncing",
+ 	 	 	 	"trans": "Synchronizace",
  	 	 	 	"eng": "Syncing"
  	 	 	},
  	 	 	"manualRefresh": {
@@ -1024,7 +1024,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"points"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${points} Ovládání povolání",
+ 	 	 	 	 	"trans": "${points} Kontroly území",
  	 	 	 	 	"eng": "${points} Occupation Control"
  	 	 	 	}
  	 	 	}
@@ -1037,11 +1037,11 @@
  	 	 	 	},
  	 	 	 	"printingTooLow": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Zlepšit pozice tisku",
+ 	 	 	 	 	 	"trans": "Zlepšit úroveň tisku",
  	 	 	 	 	 	"eng": "Improve Printing Rank"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Pořadí tisku určuje úroveň tisku položky. Zisk Tisk Exp Tisk a prodej na černém trhu",
+ 	 	 	 	 	 	"trans": "Úroveň tisku určuje úroveň vytisklého předmětu. Získej tiskové zkušenosti okamžitým Tiskem a prodejem na černém trhu",
  	 	 	 	 	 	"eng": "Printing Rank determines the level of item you print. Gain printing exp by print & sell in Black Market"
  	 	 	 	 	}
  	 	 	 	},
@@ -1051,7 +1051,7 @@
  	 	 	 	 	 	"eng": "Get even better equipments!"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Vaše stávající vybavení se zdá, že je abit zastaralé pro vaši úroveň, zkuste tisknout silnější, abyste je nahradili",
+ 	 	 	 	 	 	"trans": "Vaše stávající vybavení vypadá zastarale pro vaši úroveň, zkuste vytisknout silnější, abyste jej nahradili",
  	 	 	 	 	 	"eng": "Your current equipment seems abit outdated for your level, try printing stronger ones to replace them"
  	 	 	 	 	}
  	 	 	 	},
@@ -1070,11 +1070,11 @@
  	 	 	 	},
  	 	 	 	"aiCore": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Použijte AI Core",
+ 	 	 	 	 	 	"trans": "Použijte AI Jádro",
  	 	 	 	 	 	"eng": "Use AI Core"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Vypadá to, že máte nějaké AI jádra, použijte je k tomu, aby se AFK automaticky vyrovnal ve vhodné úrovni.",
+ 	 	 	 	 	 	"trans": "Vypadá to, že máte nějaké AI Jádra, použijte je k automatickému AFK levelingu ve vhodných oblastech odpovídající vaší úrovni.",
  	 	 	 	 	 	"eng": "Looks like you have some AI Cores, use them to do AFK auto leveling in appropriate level area."
  	 	 	 	 	}
  	 	 	 	},
@@ -1084,7 +1084,7 @@
  	 	 	 	 	 	"eng": "Acquire AI Cores"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Můžete získat AI jádra: \n         - Scavenge v různých místech \n         - CRAFting s hash procesory a technology \n         - rooting od nepřátel ve všech místech",
+ 	 	 	 	 	 	"trans": "Jak můžete získat AI jádra: \r\n         - Hledejte je v různých lokacích\r\n         - Vyrobte je za pomoci Hash procesorů a Techického odpadu\r\n         - Looting nepřátel ve všech lokalitách",
  	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
@@ -1106,13 +1106,13 @@
  	 	 	 	 	 	"eng": "Cyberspace hacking in progress"
  	 	 	 	 	},
  	 	 	 	 	"subtitle": {
- 	 	 	 	 	 	"trans": "Spojte síly s ostatními Síťoběžci, abyste prolomili pevnost SL-Data a poskytli všem hráčům bonusy.",
+ 	 	 	 	 	 	"trans": "Spojte síly s ostatními Síťoběžci, abyste prolomili SL-Data Pevnost a poskytli všem hráčům bonusy.",
  	 	 	 	 	 	"eng": "Join forces with other Netrunners to breach the SL-Data Fortress to grant all players with buff"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"completeBox": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Narušovací operace dokončena",
+ 	 	 	 	 	 	"trans": "Prolamovací operace dokončena",
  	 	 	 	 	 	"eng": "Breach operation completed"
  	 	 	 	 	},
  	 	 	 	 	"subtitle": {
@@ -1161,7 +1161,7 @@
  	 	 	 	 	"eng": "1. You created multiple accounts to gain unfair advantage"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "2. Použili jste nějaký automatizovaný software, abyste získali nespravedlivou výhodu, jako je například autoklicker, roboty atd.",
+ 	 	 	 	 	"trans": "2. Použili jste nějaký automatizovaný software, abyste získali nespravedlivou výhodu, jako je například autoklicker, boty atd.",
  	 	 	 	 	"eng": "2. You have used some kind of automated software to gain unfair advantage, such as autoclicker, bots, etc."
  	 	 	 	},
  	 	 	 	"4": {
@@ -1203,16 +1203,16 @@
  	 	"machineCrafting": {
  	 	 	"titleBox": {
  	 	 	 	"tile": {
- 	 	 	 	 	"trans": "Zaneprázdněný systém",
+ 	 	 	 	 	"trans": "Nečinný systém",
  	 	 	 	 	"eng": "system idle"
  	 	 	 	},
  	 	 	 	"subtitle": {
- 	 	 	 	 	"trans": "Vložte prosím položku",
+ 	 	 	 	 	"trans": "Vložte prosím předmět",
  	 	 	 	 	"eng": "Please insert an item"
  	 	 	 	}
  	 	 	},
  	 	 	"selectItemButton": {
- 	 	 	 	"trans": "Recyklovat položku",
+ 	 	 	 	"trans": "Recyklovat předmět",
  	 	 	 	"eng": "Recycle Item"
  	 	 	},
  	 	 	"selectAmount": {
@@ -1328,13 +1328,13 @@
  	 	"rangeSelector": {
  	 	 	"selectMaxValue": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Vyberte max. Hodnota",
+ 	 	 	 	 	"trans": "Vyberte max. hodnotu",
  	 	 	 	 	"eng": "Select max value"
  	 	 	 	}
  	 	 	},
  	 	 	"selectMinValue": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Vyberte hodnotu MIN",
+ 	 	 	 	 	"trans": "Vyberte min. hodnotu",
  	 	 	 	 	"eng": "Select min value"
  	 	 	 	}
  	 	 	}
@@ -1356,11 +1356,11 @@
  	 	"logout": {
  	 	 	"cancelAfkConfirmModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Zrušit AFK a odhlášení?",
+ 	 	 	 	 	"trans": "Zrušit AFK a odhlásit?",
  	 	 	 	 	"eng": "Cancel Afk and logout?"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Jste si jisti, že chcete zrušit AFK a odhlášení? Zdroj použitý k zahájení úkolu nebude vrácen.",
+ 	 	 	 	 	"trans": "Jste si jisti, že chcete zrušit AFK a odhlásit se? Suroviny použité k zahájení úkolu nebudou vrácen.",
  	 	 	 	 	"eng": "Are you sure you want to cancel your afk and logout? the resource used to start the task will NOT be refunded."
  	 	 	 	}
  	 	 	}
@@ -1371,7 +1371,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"playerName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Jste blokovali ${playerName}",
+ 	 	 	 	 	"trans": "Zablokovali jste ${playerName}",
  	 	 	 	 	"eng": "You have blocked ${playerName}"
  	 	 	 	},
  	 	 	 	"unblock": {
@@ -1406,7 +1406,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "Tím bude trvat ${time}",
+ 	 	 	 	"trans": "To bude trvat ${time}",
  	 	 	 	"eng": "This will take ${time}"
  	 	 	}
  	 	},
@@ -1416,14 +1416,14 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"percent"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Opravdu chcete kalibrovat tuto položku s ${percent}% destruktivní selhání šance?",
+ 	 	 	 	 	"trans": "Opravdu chcete kalibrovat tuto položku s ${percent}% s šancí na destruktivní selhání?",
  	 	 	 	 	"eng": "Are you sure you want to calibrate this item with ${percent}% destructive failure chance?"
  	 	 	 	}
  	 	 	}
  	 	},
  	 	"captcha": {
  	 	 	"title": {
- 	 	 	 	"trans": "Zadejte systémový přístupový kód pro postup",
+ 	 	 	 	"trans": "Zadejte systémový přístupový kód pro pokračování",
  	 	 	 	"eng": "Enter system passcode to proceed"
  	 	 	}
  	 	},
@@ -1479,7 +1479,7 @@
  	 	},
  	 	"rewardActionConfirmModal": {
  	 	 	"captcha": {
- 	 	 	 	"trans": "Přetáhněte všechny ikony procesů do červené skříně výhradně a zahájíte úkol",
+ 	 	 	 	"trans": "Přetáhněte všechny ikony procesů do červeného rámečku a zahájíte úkol",
  	 	 	 	"eng": "Drag all processes icons into to the red box entirely to initiate the task"
  	 	 	}
  	 	},
@@ -1490,7 +1490,7 @@
  	 	 	 	 	"eng": "Emblems"
  	 	 	 	},
  	 	 	 	"owned": {
- 	 	 	 	 	"trans": "vlastnictví",
+ 	 	 	 	 	"trans": "vlastněno",
  	 	 	 	 	"eng": "owned"
  	 	 	 	},
  	 	 	 	"buyConfirm": {
@@ -1501,7 +1501,7 @@
  	 	 	 	},
  	 	 	 	"selectConfirm": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Vyberte znak Emblem?",
+ 	 	 	 	 	 	"trans": "Výběr Emblému?",
  	 	 	 	 	 	"eng": "Select Emblem?"
  	 	 	 	 	}
  	 	 	 	}
@@ -1537,11 +1537,11 @@
  	 	},
  	 	"basicInfo": {
  	 	 	"welcomeTo": {
- 	 	 	 	"trans": "Vítejte k",
+ 	 	 	 	"trans": "Vítejte v",
  	 	 	 	"eng": "Welcome to"
  	 	 	},
  	 	 	"welcomeMsg": {
- 	 	 	 	"trans": "nejlepšímu textovému mmorpg",
+ 	 	 	 	"trans": "nejlepším textovém mmorpg",
  	 	 	 	"eng": "the best text-based mmorpg"
  	 	 	},
  	 	 	"hasRefererCheckbox": {
@@ -1612,7 +1612,7 @@
  	 	 	 	 	"eng": "View Profile"
  	 	 	 	},
  	 	 	 	"kickPlayer": {
- 	 	 	 	 	"trans": "Kick Player",
+ 	 	 	 	 	"trans": "Vyhodit hráče",
  	 	 	 	 	"eng": "kick player"
  	 	 	 	}
  	 	 	},
@@ -1685,7 +1685,7 @@
  	 	},
  	 	"dailyReward": {
  	 	 	"nextLoginWindow": {
- 	 	 	 	"trans": "Další možnost výběru",
+ 	 	 	 	"trans": "Příští časové okno pro vyzvednutí",
  	 	 	 	"eng": "Next Login Period"
  	 	 	},
  	 	 	"day": {
@@ -1697,7 +1697,7 @@
  	 	 	 	"eng": "Available"
  	 	 	},
  	 	 	"claimed": {
- 	 	 	 	"trans": "Nárokovaný",
+ 	 	 	 	"trans": "Vyzvednutý",
  	 	 	 	"eng": "Claimed"
  	 	 	},
  	 	 	"cantClaimYet": {
