--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -13,7 +13,7 @@
  	 	 	"eng": "Quest"
  	 	},
  	 	"chat": {
- 	 	 	"trans": "Povídat si",
+ 	 	 	"trans": "Chat",
  	 	 	"eng": "Chat"
  	 	},
  	 	"profile": {
@@ -1464,7 +1464,7 @@
  	 	 	 	"trans": "Co takhle si nejdříve koupit nějaké léky?",
  	 	 	 	"eng": "Maybe buy some healing item first?",
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "Vypadá to, že nemáte s sebou žádné léky, nakupte je ve městě v Trinoky Martu předtím, než vstoupite do dungeonu. Váš život v dungeonech po bitvě není regenerován",
+ 	 	 	 	 	"trans": "Vypadá to, že s sebou nemáš žádné léky, nakup je ve městě v Trinoky Martu předtím, než vstoupite do dungeonu. Váš život v dungeonech po bitvě není regenerován",
  	 	 	 	 	"eng": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon"
  	 	 	 	},
  	 	 	 	"cancel": {
@@ -1707,7 +1707,7 @@
  	 	},
  	 	"combat": {
  	 	 	"enemyIsDeadTitle": {
- 	 	 	 	"trans": "Nenašli jste tu nic",
+ 	 	 	 	"trans": "Nic jsi tu nenašel",
  	 	 	 	"eng": "You found nothing here"
  	 	 	},
  	 	 	"equipmentBrokenMsg": {
@@ -1731,7 +1731,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"playerCount"
  	 	 	 	],
- 	 	 	 	"trans": "${playerCount} Přehrávač (y) připojen",
+ 	 	 	 	"trans": "${playerCount} Hráč(i) připojen",
  	 	 	 	"eng": "${playerCount} player(s) connected"
  	 	 	}
  	 	},
@@ -1749,7 +1749,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"failureRateNoBreak": {
- 	 	 	 	"trans": "Možnost bezpečného selhání",
+ 	 	 	 	"trans": "Šance bezpečného selhání",
  	 	 	 	"eng": "Chance of safe failure"
  	 	 	},
  	 	 	"failureRate": {
