--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -1762,7 +1762,7 @@
  	 	 	 	 	"eng": "Core not found"
  	 	 	 	},
  	 	 	 	"subTitle": {
- 	 	 	 	 	"trans": "Prosím, vložte kalibrační jádro",
+ 	 	 	 	 	"trans": "Prosím, vložte Kalibrační jádro",
  	 	 	 	 	"eng": "Please insert Calibration Core"
  	 	 	 	}
  	 	 	},
@@ -1771,7 +1771,7 @@
  	 	 	 	"eng": "Insert Core"
  	 	 	},
  	 	 	"activateDescription": {
- 	 	 	 	"trans": "Pro kalibraci zařízení je nutné kalibrační jádro",
+ 	 	 	 	"trans": "Pro kalibraci zařízení je nutné Kalibrační jádro",
  	 	 	 	"eng": "A Calibration Core is required to calibrate equipment"
  	 	 	},
  	 	 	"activating": {
@@ -1795,7 +1795,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"selectEquipmentTitle": {
- 	 	 	 	"trans": "Vyberte položku, kterou chcete kalibrovat",
+ 	 	 	 	"trans": "Vyberte předmět, který chcete kalibrovat",
  	 	 	 	"eng": "Please select an item to calibrate"
  	 	 	},
  	 	 	"upgradeButton": {
@@ -1823,11 +1823,11 @@
  	 	},
  	 	"itemInbox": {
  	 	 	"title": {
- 	 	 	 	"trans": "Schránka položek",
+ 	 	 	 	"trans": "Schránka s předměty",
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Položky zde umístěné budou automaticky přesunuty do inventáře, jakmile budete mít dostatek prostoru.",
+ 	 	 	 	"trans": "Předměty zde umístěné budou automaticky přesunuty do inventáře, jakmile budete mít dostatek prostoru.",
  	 	 	 	"eng": "Items here will be automatically moved to your inventory once you have enough space."
  	 	 	},
  	 	 	"expireDate": {
@@ -1838,11 +1838,11 @@
  	 	 	 	"eng": "Expires in ${date}"
  	 	 	},
  	 	 	"empty": {
- 	 	 	 	"trans": "Ve schránce položek není žádná položka",
+ 	 	 	 	"trans": "Ve schránce není žádný předmět",
  	 	 	 	"eng": "There is no item in your item inbox"
  	 	 	},
  	 	 	"getAllItems": {
- 	 	 	 	"trans": "Získat všechny položky",
+ 	 	 	 	"trans": "Získat všechny předměty",
  	 	 	 	"eng": "Get All Items"
  	 	 	}
  	 	},
@@ -1889,7 +1889,7 @@
  	 	},
  	 	"noPrintableCaches": {
  	 	 	"title": {
- 	 	 	 	"trans": "Nenalezeno Schéma Vybavení",
+ 	 	 	 	"trans": "Nenalezeno Schéma vybavení",
  	 	 	 	"eng": "Equipment Cache not found"
  	 	 	},
  	 	 	"subTitle": {
@@ -1911,7 +1911,7 @@
  	 	},
  	 	"npcSellPage": {
  	 	 	"autoSell": {
- 	 	 	 	"trans": "Auto Sell",
+ 	 	 	 	"trans": "Automatický prodej",
  	 	 	 	"eng": "Auto Sell"
  	 	 	}
  	 	},
@@ -1971,7 +1971,7 @@
  	 	},
  	 	"statsPage": {
  	 	 	"quitGang": {
- 	 	 	 	"trans": "Quit gangu",
+ 	 	 	 	"trans": "Opustit gang",
  	 	 	 	"eng": "Quit Gang"
  	 	 	},
  	 	 	"logout": {
@@ -2017,7 +2017,7 @@
  	 	 	 	"eng": "combat"
  	 	 	},
  	 	 	"dungeon": {
- 	 	 	 	"trans": "žalář",
+ 	 	 	 	"trans": "Dungeon",
  	 	 	 	"eng": "dungeon"
  	 	 	},
  	 	 	"social": {
@@ -2104,7 +2104,7 @@
  	 	 	"eng": "Amount"
  	 	},
  	 	"itemUpgradeCapacity": {
- 	 	 	"trans": "Kapacita kolaborace",
+ 	 	 	"trans": "Kapacita spolupráce",
  	 	 	"eng": "Collaboration Capacity"
  	 	},
  	 	"globalEffects": {
@@ -2112,7 +2112,7 @@
  	 	 	"eng": "Global Effects"
  	 	},
  	 	"name": {
- 	 	 	"trans": "název",
+ 	 	 	"trans": "Název",
  	 	 	"eng": "Name"
  	 	},
  	 	"tag": {
@@ -2197,7 +2197,7 @@
  	 	 	"eng": "${time} ago"
  	 	},
  	 	"systemStandby": {
- 	 	 	"trans": "Záložní režim systému",
+ 	 	 	"trans": "Systém v pohotovosti",
  	 	 	"eng": "System standby"
  	 	},
  	 	"password": {
@@ -2208,7 +2208,7 @@
  	"itemLore": {
  	 	"contribution": {
  	 	 	"title": {
- 	 	 	 	"trans": "Hráči přispívaný obsah",
+ 	 	 	 	"trans": "Hráči přidaný obsah",
  	 	 	 	"eng": "Player contributed content"
  	 	 	},
  	 	 	"description": {
@@ -2227,7 +2227,7 @@
  	},
  	"cost": {
  	 	"requireGang": {
- 	 	 	"trans": "Je vyžadováno, abyste byli v gangu",
+ 	 	 	"trans": "Je vyžadováno, aby jsi byl v gangu",
  	 	 	"eng": "Requires you to be in a gang"
  	 	},
  	 	"requireTopGang": {
@@ -2242,7 +2242,7 @@
  	"statsType": {
  	 	"maxHealth": {
  	 	 	"name": {
- 	 	 	 	"trans": "Maximální Zdraví",
+ 	 	 	 	"trans": "Maximální zdraví",
  	 	 	 	"eng": "Max Health"
  	 	 	},
  	 	 	"description": {
@@ -2276,7 +2276,7 @@
  	 	 	 	"eng": "Health regen"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Množství zdravotního stavu regenerovaného po skončení boje",
+ 	 	 	 	"trans": "Množství zdraví regenerovaného po skončení boje",
  	 	 	 	"eng": "Amount of health regenerated after the end of combat"
  	 	 	}
  	 	},
@@ -2306,7 +2306,7 @@
  	 	 	 	"eng": "Crit damage"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Ovlivní poškození nepřítele kritickým útokem",
+ 	 	 	 	"trans": "Ovlivňuje míru kritického poškození, které způsobíš nepříteli",
  	 	 	 	"eng": "Influence the critical attack damage you deal to the enemy"
  	 	 	}
  	 	},
@@ -2326,7 +2326,7 @@
  	 	 	 	"eng": "Escape"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Vaše šance na únik od nepřítele v dungeonu",
+ 	 	 	 	"trans": "Vaše šance na únik před nepřítelem v dungeonu",
  	 	 	 	"eng": "Chances of you escaping from a dungeon enemy"
  	 	 	}
  	 	},
@@ -2336,7 +2336,7 @@
  	 	 	 	"eng": "Stun chance"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Šance na omráčení nepřítele při útoku, \r\n     omráčení způsobí nemožnost reakce na váš útok",
+ 	 	 	 	"trans": "Šance na omráčení nepřítele při útoku, \r\n     omráčení způsobí nemožnost reagovat na váš útok",
  	 	 	 	"eng": "Chance of you stunning your enemy when dealing damage, \r\n    causing them not able to respond to your attack"
  	 	 	}
  	 	},
@@ -2456,7 +2456,7 @@
  	 	 	 	"eng": "Calibration Chance"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Snižuje šanci na destruktivní selhání při kalibraci položek",
+ 	 	 	 	"trans": "Snižuje šanci na destruktivní selhání při kalibraci předmětů",
  	 	 	 	"eng": "Reduces chance of destructive failure when calibrating items"
  	 	 	}
  	 	},
@@ -2466,7 +2466,7 @@
  	 	 	 	"eng": "Calibration Safety"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Selhání kalibrace nezničí položku",
+ 	 	 	 	"trans": "Selhání kalibrace nezničí předmět",
  	 	 	 	"eng": "Calibration fails will not destroy the item"
  	 	 	}
  	 	},
@@ -2563,7 +2563,7 @@
  	},
  	"reward": {
  	 	"unknown": {
- 	 	 	"trans": "Neznámé položky",
+ 	 	 	"trans": "Neznámé předměty",
  	 	 	"eng": "Unknown Items"
  	 	},
  	 	"gangResource": {
@@ -2628,7 +2628,7 @@
  	 	 	 	"eng": "Discard"
  	 	 	},
  	 	 	"warning": {
- 	 	 	 	"trans": "Výše uvedená položka/položky budou zničeny a nebudou umístěny do vašeho inventáře. Tato akce je nevratná.",
+ 	 	 	 	"trans": "Výše uvedeny předmět/předměty budou zničeny a nebudou umístěny do vašeho inventáře. Tato akce je nevratná.",
  	 	 	 	"eng": "The item/items above will be discarded and not be placed into your inventory. This action is irreversible."
  	 	 	}
  	 	}
@@ -2666,7 +2666,7 @@
  	 	 	 	"eng": "Reach printing rank 3"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Úroveň vybavení, které tisknete ze Schémat, je dáno vaší úrovni Tisku, \r\n         zvyšte vaši úroveň Tisku, abyste mohli tisknout vybavení na vyšší úrovni. \r\n        \r\n         Molekulární 3D tiskárnu najdete v [Centrální Hub], vytiskněte s ní nějaká Schémata vybavení, abyste vylepšili vaší úroveň Tisku.",
+ 	 	 	 	"trans": "Úroveň vybavení, které tisknete ze Schémat, je dáno vaší úrovní Tisku, \r\n         zvyšte vaši úroveň Tisku, abyste mohli tisknout vybavení na vyšší úrovni. \r\n        \r\n         Molekulární 3D tiskárnu najdete v [Centrální Hub], vytiskněte s ní nějaká Schémata vybavení, abyste vylepšili vaší úroveň Tisku.",
  	 	 	 	"eng": "The level of itemS you print with Caches are determined by your Printing Rank,\r\n        level up your Printing Rank so you can print higher level items.\r\n        \r\n        You can find Molecular 3D Printer at [Central Hub], use it to print some caches to level up your Printing Rank"
  	 	 	}
  	 	},
@@ -2705,7 +2705,7 @@
  	 	 	},
  	 	 	"dungeon": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "žalář",
+ 	 	 	 	 	"trans": "dungeon",
  	 	 	 	 	"eng": "dungeon"
  	 	 	 	}
  	 	 	}
