--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -2598,7 +2598,7 @@
  	 	 	"vars": [
  	 	 	 	"globalQuestPoint"
  	 	 	],
- 	 	 	"trans": "${globalQuestPoint} pokrok narušení Pevnosti SL-DAT",
+ 	 	 	"trans": "${globalQuestPoint} pokrok narušení Pevnosti SL-DATA",
  	 	 	"eng": "${globalQuestPoint} SL Data Fortress breach progress"
  	 	}
  	},
@@ -2628,7 +2628,7 @@
  	 	 	 	"eng": "Discard"
  	 	 	},
  	 	 	"warning": {
- 	 	 	 	"trans": "Výše uvedeny předmět/předměty budou zničeny a nebudou umístěny do vašeho inventáře. Tato akce je nevratná.",
+ 	 	 	 	"trans": "Výše uvedený předmět/předměty budou zničeny a nebudou umístěny do vašeho inventáře. Tato akce je nevratná.",
  	 	 	 	"eng": "The item/items above will be discarded and not be placed into your inventory. This action is irreversible."
  	 	 	}
  	 	}
@@ -2646,7 +2646,7 @@
  	 	 	 	"eng": "Newbie with benefit"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Zabijte několik nepřátel a získejte plnou sadu položek pro začátek vaší cesty",
+ 	 	 	 	"trans": "Zabijte několik nepřátel a získejte plnou sadu předmětů pro začátek vaší cesty",
  	 	 	 	"eng": "Kill some enemies and get a full set of items for you to start your journey"
  	 	 	}
  	 	},
@@ -2686,7 +2686,7 @@
  	 	 	 	"eng": "Market merchant"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Můžete prodávat a zakoupit položky od hráčů na hráčském trhu, vyzkoušejte si to přidáním položky na hráčský trh",
+ 	 	 	 	"trans": "Můžete prodávat a zakoupit předměty od hráčů na hráčském trhu, vyzkoušejte si to přidáním předmětu na hráčský trh",
  	 	 	 	"eng": "You can sell and purchase items from players in the player market, try it out by adding an item to the player market"
  	 	 	}
  	 	},
@@ -2781,7 +2781,7 @@
  	 	 	"eng": "Click here to scan for street enemies"
  	 	},
  	 	"localCombatTip": {
- 	 	 	"trans": "když porazíe nepřítele, získáte zkušenosti, Bitcoin a kořist, \n                 vyzkoušejte to!",
+ 	 	 	"trans": "když porazíte nepřátele, získáte zkušenosti, Bitcoiny a kořist, \n                 vyzkoušejte to!",
  	 	 	"eng": "you will receive exp, Bitcoin and loots when you defeat enemies,\r\n                give it a try now!"
  	 	},
  	 	"primaryAttack": {
@@ -3036,7 +3036,7 @@
  	 	"donation2": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "Titul dárce\"Přispěvovatel\"",
+ 	 	 	 	 	"trans": "Titul dárce\"Dárce\"",
  	 	 	 	 	"eng": "\"Donator\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
